--- a/styles.css
+++ b/styles.css
@@ -389,7 +389,7 @@ f#search-form:valid #i41 {
 .context-menu-button {
 	display: flex;
 	align-items: center;
-	background: rgba(255, 0, 0, 0);
+	background: transparent;
 	padding: 5px;
 	width: 100%;
 	text-align: left;
@@ -444,7 +444,7 @@ f#search-form:valid #i41 {
 	height: 20px;
 	border: none;
 	cursor: pointer;
-	background: #01041500;
+	background: transparent;
 	font-size: 14px;
 	color: #ffffff;
 	transition: color 0.3s;
