--- a/styles.css
+++ b/styles.css
@@ -552,3 +552,23 @@ f#search-form:valid #i41 {
     transform: translate(-50%, -50%);
     z-index: 99999;
 }
+
+@media screen and (max-width: 400px){
+	.context-menu-container{
+		max-width: 200px;
+		padding: 10px;
+		font-size: 12px;
+	}
+
+	.confirmation-message{
+
+		display: flex;
+		word-wrap: normal;
+		flex-direction: column;
+		justify-content: center;
+		max-width: 180px;
+		font-size: 12px;
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+		line-height: 1;
+	}
+}
